--- a/index.html
+++ b/index.html
@@ -2,61 +2,56 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Generador de Carnets - Liga Santandereana de Lucha Olímpica</title>
+  <title>IdentiLucha - Generar Carnet</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <form id="formulario">
-    <h1>Generar Carnet Deportivo</h1>
+  <h1>Generar Carnet Deportivo</h1>
 
-    <input type="text" id="nombre" placeholder="Nombres completos" required />
-    
-    <select id="tipo-doc" required>
-      <option value="">Tipo de documento</option>
-      <option value="CC">Cédula de Ciudadanía</option>
+  <form id="carnetForm">
+    <label>Nombre completo:</label>
+    <input type="text" id="nombres" required />
+
+    <label>Tipo de documento:</label>
+    <select id="tipoDocumento" required>
+      <option value="CC">Cédula</option>
       <option value="TI">Tarjeta de Identidad</option>
-      <option value="CE">Cédula de Extranjería</option>
+      <option value="CE">Cédula Extranjera</option>
     </select>
-    
-    <input type="text" id="numero-doc" placeholder="Número de documento" required />
-    <input type="text" id="contacto" placeholder="Número de contacto de emergencia" required />
-    <input type="text" id="sangre" placeholder="Tipo de sangre" required />
 
-    <select id="rol">
+    <label>Número de documento:</label>
+    <input type="text" id="numeroDocumento" required />
+
+    <label>Tipo de sangre:</label>
+    <input type="text" id="tipoSangre" required />
+
+    <label>Contacto de emergencia:</label>
+    <input type="text" id="contactoEmergencia" required />
+
+    <label>Rol:</label>
+    <select id="rol" required>
+      <option value="">Seleccionar...</option>
       <option value="DEPORTISTA">Deportista</option>
       <option value="ENTRENADOR">Entrenador</option>
       <option value="JUEZ">Juez</option>
-      <option value="ADMINISTRATIVO - PRESIDENTE">Presidente</option>
-      <option value="ADMINISTRATIVO - TESORERO">Tesorero</option>
-      <option value="ADMINISTRATIVO - COMITÉ">Comité Interdisciplinario</option>
+      <option value="ADMINISTRATIVO">Administrativo</option>
     </select>
 
+    <label id="puestoLabel" style="display: none;">Puesto que ocupa:</label>
+    <input type="text" id="puesto" style="display: none;" />
+
+    <label>Foto:</label>
     <input type="file" id="foto" accept="image/*" required />
+
     <button type="submit">Generar Carnet</button>
   </form>
 
-  <div id="carnet" style="display:none;">
-    <div class="carnet-contenedor">
-      <img src="logo.png" class="logo" />
-      <div class="contenido">
-        <h2>LIGA SANTANDEREANA DE LUCHA OLÍMPICA</h2>
-        <div class="datos">
-          <img id="foto-preview" class="foto" />
-          <div class="texto">
-            <p><strong>Nombre:</strong> <span id="nombre-c"></span></p>
-            <p><strong>Documento:</strong> <span id="documento-c"></span></p>
-            <p><strong>Emergencia:</strong> <span id="contacto-c"></span></p>
-            <p><strong>Sangre:</strong> <span id="sangre-c"></span></p>
-            <p><strong>Rol:</strong> <span id="rol-c"></span></p>
-          </div>
-        </div>
-      </div>
-      <img id="qr-code" class="qr" />
-    </div>
-  </div>
+  <div id="preview" class="card-container" style="display: none;"></div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+  <!-- Librerías necesarias -->
+  <script src="html2pdf.bundle.min.js"></script>
+  <script src="qrcode.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
+
