--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <!-- Librerías necesarias -->
   <script src="html2pdf.bundle.min.js"></script>
-  <script src="qrcode.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/qrious@4.0.2/dist/qrious.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
