--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <div id="preview" class="card-container" style="display: none;"></div>
 
-  <!-- Librerías necesarias -->
+  <!-- Librerías -->
   <script src="html2pdf.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/qrious@4.0.2/dist/qrious.min.js"></script>
   <script src="script.js"></script>
