--- a/index.html
+++ b/index.html
@@ -1,56 +1,78 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>IdentiLucha - Generar Carnet</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Carnetización - Liga Santandereana de Lucha</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Generar Carnet Deportivo</h1>
 
-  <form id="carnetForm">
-    <label>Nombre completo:</label>
-    <input type="text" id="nombres" required />
+    <header class="main-header">
+        <img src="logo.png" alt="Logo de la Liga" class="header-logo">
+        <h1>Portal de Carnetización</h1>
+        <h2>Liga Santandereana de Lucha Olímpica</h2>
+    </header>
 
-    <label>Tipo de documento:</label>
-    <select id="tipoDocumento" required>
-      <option value="CC">Cédula</option>
-      <option value="TI">Tarjeta de Identidad</option>
-      <option value="CE">Cédula Extranjera</option>
-    </select>
+    <main class="container">
+        <div class="form-container">
+            <h3>Registro de Afiliado</h3>
+            <form id="registroForm">
+                <div class="form-grid">
+                    <div class="form-group"><label for="nombres">Nombres y Apellidos</label><input type="text" id="nombres" class="form-input" required></div>
+                    <div class="form-group"><label for="rol">Rol en la Liga</label><select id="rol" class="form-input"><option value="Deportista">Deportista</option><option value="Entrenador">Entrenador</option><option value="Juez">Juez</option><option value="Administrativo">Administrativo</option></select></div>
+                    <div class="form-group"><label for="numDoc">Número de Documento</label><input type="text" id="numDoc" class="form-input" required></div>
+                    <div class="form-group"><label for="tipoDoc">Tipo de Documento</label><select id="tipoDoc" class="form-input"><option value="CC">C.C.</option><option value="TI">T.I.</option><option value="CE">C.E.</option><option value="PA">Pasaporte</option></select></div>
+                    <div class="form-group"><label for="tipoSangre">Tipo de Sangre y RH</label><input type="text" id="tipoSangre" class="form-input" placeholder="Ej: O+" required></div>
+                    <div class="form-group"><label for="telEmergencia">Teléfono de Emergencia</label><input type="tel" id="telEmergencia" class="form-input" required></div>
+                    <div class="form-group full-width"><label for="foto">Foto tipo Documento (Fondo Blanco)</label><input type="file" id="foto" class="form-input" accept="image/*" required></div>
+                </div>
+                <button type="submit" class="btn btn-primary">Generar Carnet</button>
+            </form>
+        </div>
 
-    <label>Número de documento:</label>
-    <input type="text" id="numeroDocumento" required />
+        <div id="carnet-container" class="carnet-container" style="display: none;">
+            <h3>Vista Previa del Carnet</h3>
+            
+            <div id="carnet-virtual">
+                <div class="carnet-header">
+                    <img src="logo.png" id="logo-img" alt="Logo">
+                    <span>LIGA SANTANDEREANA DE LUCHA OLÍMPICA</span>
+                </div>
+                <div class="carnet-body">
+                    <div class="foto-container">
+                        <img id="carnet-foto" src="" alt="Foto">
+                    </div>
+                    <div class="info-container">
+                        <div class="info-nombre">
+                            <p id="carnet-nombres">NOMBRE APELLIDO</p>
+                            <span id="carnet-doc">C.C. 1234567890</span>
+                        </div>
+                        <div id="carnet-rol-barra" class="rol-barra">
+                            <span id="carnet-rol">ROL</span>
+                        </div>
+                        <div class="info-detalles">
+                            <div class="detalles-contacto">
+                                <label>Número de contacto de emergencia:</label>
+                                <span id="carnet-tel">3001234567</span>
+                                <span id="carnet-sangre">O+</span>
+                            </div>
+                            <div id="carnet-qr" class="qr-code"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <button id="descargar-pdf" class="btn btn-secondary">Descargar en PDF</button>
+        </div>
+    </main>
 
-    <label>Tipo de sangre:</label>
-    <input type="text" id="tipoSangre" required />
-
-    <label>Contacto de emergencia:</label>
-    <input type="text" id="contactoEmergencia" required />
-
-    <label>Rol:</label>
-    <select id="rol" required>
-      <option value="">Seleccionar...</option>
-      <option value="DEPORTISTA">Deportista</option>
-      <option value="ENTRENADOR">Entrenador</option>
-      <option value="JUEZ">Juez</option>
-      <option value="ADMINISTRATIVO">Administrativo</option>
-    </select>
-
-    <label id="puestoLabel" style="display: none;">Puesto que ocupa:</label>
-    <input type="text" id="puesto" style="display: none;" />
-
-    <label>Foto:</label>
-    <input type="file" id="foto" accept="image/*" required />
-
-    <button type="submit">Generar Carnet</button>
-  </form>
-
-  <div id="preview" class="card-container" style="display: none;"></div>
-
-  <!-- Librerías -->
-  <script src="html2pdf.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/qrious@4.0.2/dist/qrious.min.js"></script>
-  <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="qrcode.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
